<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp"
    android:background="?attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/cultivoNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cultivo_nombre"
            android:textStyle="bold"
            android:textColor="#3A590A"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/cultivoCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cultivo_cantidad"
            android:textColor="#424242"
            android:textSize="16sp"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/cultivoFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cultivo_fecha"
            android:textColor="#424242"
            android:textSize="16sp"
            android:layout_marginBottom="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/editButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editar"
                android:background="@drawable/rounded_button_edit"
                android:textColor="#FFFFFF"
                android:layout_marginEnd="8dp"
                android:textSize="14sp" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button_delete"
                android:text="@string/eliminar"
                android:textColor="#1EC339"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
